move workdir to the start

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,7 @@
 FROM python:3.9
 
+WORKDIR /usr/src/app
+
 # Ubuntu stuff.
 RUN apt update && apt upgrade -y && \
     apt install -y software-properties-common libpng-dev libjpeg-dev libtiff-dev wget curl libgl1-mesa-glx && \
@@ -7,7 +9,7 @@ RUN apt update && apt upgrade -y && \
 
 # Download SAM weights.
 RUN python3.9 -m pip install gdown
-RUN mkdir backend/weights
+RUN mkdir --parents backend/weights
 RUN gdown https://drive.google.com/file/d/1XyumF6_fdAxFmxpFcmPf-q84LU_22EMC/view?usp=sharing --fuzzy -O backend/weights/model.pth
 
 # App stuff.
@@ -15,7 +17,6 @@ COPY backend/requirements.txt .
 RUN python3.9 -m pip install --upgrade pip && python3.9 -m pip install -U -r requirements.txt
 RUN mkdir -p /usr/src/app
 COPY . /usr/src/app
-WORKDIR /usr/src/app
 
 EXPOSE 80
 ENV PYTHONPATH=backend/$PYTHONPATH
